# pi

./: LICENSE.md  README.md
PI_4bit/: Developer's Guide - Full Edition.odt  pi-4bit_simulation.cv
PI_8bit/: ISA.odt  InstructionSetArchitecture_FullEdition.odt
PI_8bit/fpga/: .gitignore  alu.vhd  const.ucf  flag_register.vhd  general_purpose_register_block.vhd  memory.vhd  microcontroller.vhd  pi.xise  readme.txt  register_bank.vhd  registry_ab.vhd  registry_acc.vhd  registry_bank.vhd  registry_pc.vhd  run.bat  sim.vhd  sim_alu.vhd  sim_gpr.vhd  sim_microcontroler.vhd  sim_top.vhd  top.vhd
PI_8bit/fpga_programming_converter/: .gitignore  convert.py
pi_asm/: .gitignore  CMakeLists.txt  ProgramArgumentProcessing.h  main.cpp  readme.txt
pi_asm/Assembly/: Assembly.cpp  Assembly.h  AssemblyInstruction.cpp  AssemblyInstruction.h  Data.cpp  Data.h  Entity.cpp  Entity.h  InstructionFLAG.cpp  InstructionFLAG.h  InstructionMOV.cpp  InstructionMOV.h
pi_asm/Assembly/Writer/: BinaryWriter.cpp  BinaryWriter.h  DecimalWriter.cpp  DecimalWriter.h  HexadecimalWriter.cpp  HexadecimalWriter.h  Writer.cpp  Writer.h
pi_asm/Tokens/: Comment.cpp  Comment.h  Expression.cpp  Expression.h  FLAG.cpp  FLAG.h  Hook.cpp  Hook.h  Instruction.cpp  Instruction.h  Logic.cpp  Logic.h  MOV.cpp  MOV.h  Pattern.cpp  Pattern.h  Program.cpp  Program.h  Value.cpp  Value.h  Variable.cpp  Variable.h  preprocessor.cpp  preprocessor.h  tokenizer.cpp  tokenizer.h  tokens.cpp  tokens.h
pi_asm/example_code/: fibonacci.pi
pi_asm/example_code/8_bit_only/: hello_world.pi  soi16bit.pi  soi16bit_nm.pi  soi8bit.pi  soi8bit_nm.pi
pi_vm/: .gitignore  CMakeLists.txt  ControllerInterface.h  ProgramArgumentParser.h  ProgramArgumentProcessing.h  main.cpp  readme.txt  utils.h
pi_vm/computer/: Computer.h  Memory.h  Processor.h
pi_vm/computer/architecture/: Bit4.h  Bit8.h  ComputerArchitecture.h
pi_vm/example_executables/: readme.txt
pi_vm/example_executables/4-bit/: example_program.dec  example_program.hex
pi_vm/example_executables/8-bit/: hello_world.hex
pi_vm/programmer/: Programmer.h
pi_vm/programmer/ExecutableFileReader/: BinaryFileReader.h  DecimalFileReader.h  ExecutableFileReader.h  HexadecimalFileReader.h
